--- a/Gostoso.htm
+++ b/Gostoso.htm
@@ -46,7 +46,7 @@
             <p>casa cmg?</p>
             <div class="buttons-container">
                 <button>
-                    <a href="https://www.instagram.com/imnotizzyy/">não</a>
+                    <a href="https://www.instagram.com/imnotizzyy/">nao</a>
                 </button>
                 <button id="no">sim</button>
             </div>
