--- a/Gostoso.htm
+++ b/Gostoso.htm
@@ -46,9 +46,9 @@
             <p>casa cmg?</p>
             <div class="buttons-container">
                 <button>
-                    <a href="https://www.instagram.com/imnotizzyy/">nao</a>
+                    <a href="https://youtube.com/shorts/7fTHD07Q9Pw?si=scbETdq_d8cq15dL">sim</a>
                 </button>
-                <button id="no">sim</button>
+                <button id="no">nao</button>
             </div>
         </div>
     </body>
