--- a/Gostoso.htm
+++ b/Gostoso.htm
@@ -43,7 +43,7 @@
     </head>
     <body>
         <div class="box">
-            <p>casa cmg?</p>
+            <p>quer namorar comigo?</p>
             <div class="buttons-container">
                 <button>
                     <a href="https://youtube.com/shorts/7fTHD07Q9Pw?si=scbETdq_d8cq15dL">sim</a>
